output.txt
In file included from BasicM.cpp:1:0:
BasicM.hpp:1:0: error: unterminated #ifndef
 #ifndef BASIC_MATH_HPP_
 ^
In file included from TestBasicM.cpp:17:0:
BasicM.hpp:1:0: error: unterminated #ifndef
 #ifndef BASIC_MATH_HPP_
 ^
TestBasicM.cpp:41:5: error: ‘CBasicMath’ does not name a type
     CBasicMath *mTestObj;
     ^
In file included from /usr/local/include/cppunit/TestCase.h:6:0,
                 from TestBasicM.cpp:4:
TestBasicM.cpp: In member function ‘void TestBasicMath::testAddition()’:
TestBasicM.cpp:49:25: error: ‘mTestObj’ was not declared in this scope
     CPPUNIT_ASSERT(5 == mTestObj->Addition(2,3));
                         ^
TestBasicM.cpp: In member function ‘void TestBasicMath::testMultiply()’:
TestBasicM.cpp:55:25: error: ‘mTestObj’ was not declared in this scope
     CPPUNIT_ASSERT(6 == mTestObj->Multiply(2,3));
                         ^
TestBasicM.cpp: In member function ‘virtual void TestBasicMath::setUp()’:
TestBasicM.cpp:60:5: error: ‘mTestObj’ was not declared in this scope
     mTestObj = new CBasicMath();
     ^
TestBasicM.cpp:60:20: error: expected type-specifier before ‘CBasicMath’
     mTestObj = new CBasicMath();
                    ^
TestBasicM.cpp: In member function ‘virtual void TestBasicMath::tearDown()’:
TestBasicM.cpp:65:12: error: ‘mTestObj’ was not declared in this scope
     delete mTestObj;
            ^
